GNOME Bugzilla – Bug 755096
wayland: Fix output destroyed callback vfunc type
Last modified: 2015-09-30 01:41:09 UTC
It is not a callback on a parameter signal, and get no GParamSpec passed to it. This fixes a crash when a surface is on a destroyed output.
Created attachment 311434 [details] [review] wayland: Fix output destroyed callback vfunc type
Review of attachment 311434 [details] [review]: LG.
Attachment 311434 [details] pushed as e23e697 - wayland: Fix output destroyed callback vfunc type
*** Bug 755493 has been marked as a duplicate of this bug. ***
*** Bug 755806 has been marked as a duplicate of this bug. ***